@@ -172,7 +172,20 @@ int main(int, char *[])
       // Validation of marginal variance
       const Point marginalVariance(result.getConditionalMarginalVariance(X));
       assert_almost_equal(marginalVariance, Point(sampleSize), 1e-13, 1e-13);
+    }
 
+    {
+      // fix https: //github.com/openturns/openturns/issues/1861
+      RandomGenerator::SetSeed(0);
+      SymbolicFunction rho("tau", "exp(-abs(tau))*cos(2*pi_*abs(tau))");
+      const Point scale = {1.0};
+      StationaryFunctionalCovarianceModel model(scale, scale, rho);
+      const Sample x(Normal(0, 1.0).getSample(20));
+      const Sample y(x + Normal(0, 0.1).getSample(20));
+      KrigingAlgorithm algo(x, y, model, LinearBasisFactory().build());
+      algo.run();
+      KrigingResult result(algo.getResult());
+      assert_almost_equal(result.getConditionalMarginalVariance(x), Point(x.getSize(), 0.), 1e-16, 1e-16);
     }
 
   }
